[package]
name = "tiberius-test"
version = "0.1.0"
edition = "2024"
authors = [ "lei.zhao <oizhaolei@gmail.com>" ]
description = "tiberius utility tools"
license-file = "LICENSE.txt"


[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
tiberius = { version = "0.12.3", features = ["tokio", "tokio-util"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }


[package.metadata.rpm.cargo]
buildflags = ["--release"]
target = "x86_64-unknown-linux-musl"


[package.metadata.rpm.targets]
tiberius-test = { path = "/usr/bin/tiberius-test" }
